Enabling jar launch